force scrollbar to avoid center jump

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 html{
     margin: 0;
     padding: 0;
+    overflow-y: scroll;
 }
 
 body{
